<resources>
    <!-- application -->
    <string name="app_name">Marathon Tracker</string>
    <string name="tracker_enabled">Tracking</string>
    <string name="default_float_value">0.0</string>
    <string name="not_applicable">N/A</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="speed">speed</string>
    <string name="bearing">bearing</string>
    <string name="east_abbr">E</string>
    <string name="west_abbr">W</string>
    <string name="north_abbr">N</string>
    <string name="south_abbr">S</string>
    <string name="north_east_abbr">NE</string>
    <string name="north_west_abbr">NW</string>
    <string name="south_east_abbr">SE</string>
    <string name="south_west_abbr">SW</string>
    <string name="checkpoint_achieved">Checkpoint achieved</string>

    <!-- geofence error messages -->

    <string name="geofence_error_not_available">Geofence service is not available at the moment.</string>
    <string name="geofence_error_too_many_geofences">Too many geofences registered by the application.</string>
    <string name="geofence_error_too_many_pending_intents">Too many PendingIntents provided to addGeofences() call.</string>
    <string name="geofence_error_unknown_error">Unknown error: Geofence service not available.</string>

    <!-- toast messages -->

    <string name="toast_no_track_selected">No track selected!</string>
    <string name="toast_service_running_in_background">Tracker service is running in background.</string>
    <string name="toast_location_stale">Last known location is stale!</string>
    <string name="toast_location_permission_denied">Location permission denied!</string>
    <string name="toast_location_services_off">Location services turned off!</string>
    <string name="toast_location_services_settings_change_unavailable">Location services settings change not possible!</string>
    <string name="toast_add_track_successful">Successfully added track(s).</string>

    <!-- menu -->

    <string name="menu_preferences">Preferences</string>

    <!-- preferences -->

    <string name="pref_group_location_settings">Location settings</string>
    <string name="pref_location_request_interval">Request interval</string>
    <string name="pref_location_request_interval_summary">Interval (in milliseconds) between two requests for current location.</string>
    <string name="pref_location_request_fastest_interval">Fastest request interval</string>
    <string name="pref_location_request_fastest_interval_summary">Smallest interval (in milliseconds) between two requests for current location.</string>

</resources>
