<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_group_location_settings"
        android:title="@string/pref_group_location_settings">

        <com.udragan.android.marathontracker.infrastructure.preferences.EditTextPreferenceWithValue
            android:defaultValue="10000"
            android:key="LOCATION_REQUEST_INTERVAL"
            android:numeric="integer"
            android:summary="@string/pref_location_request_interval_summary"
            android:title="@string/pref_location_request_interval" />

        <com.udragan.android.marathontracker.infrastructure.preferences.EditTextPreferenceWithValue
            android:defaultValue="5000"
            android:key="LOCATION_REQUEST_FASTEST_INTERVAL"
            android:numeric="integer"
            android:summary="@string/pref_location_request_fastest_interval_summary"
            android:title="@string/pref_location_request_fastest_interval" />

    </PreferenceCategory>
</PreferenceScreen>